--- a/Carousel.Android/Carousel.Android.csproj
+++ b/Carousel.Android/Carousel.Android.csproj
@@ -113,5 +113,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-mdpi\launcher_foreground.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Sonad.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
